Added phantomjs specs for ensuring POST works...
- Updated travis to run rspecs
- Updated banner for lti app and added logo
- Added backdoor to allow for testing post method

--- a/ember-app/app/styles/lti_apps/_default.less
+++ b/ember-app/app/styles/lti_apps/_default.less
@@ -1,7 +1,7 @@
 #wrapper {
   header {
     // background-color: #ccaaff;
-    // background-image: url('http://wpmu.org/wp-content/uploads/2012/01/search-big.jpg');
+    background-image: url('/assets/images/public_resources_logo.png');
     background-position: 10px 15px;
     background-repeat: none;
   }
