fixed CSS for dashboard header

--- a/ember-app/app/styles/lti_apps/_default.less
+++ b/ember-app/app/styles/lti_apps/_default.less
@@ -1,8 +1,7 @@
 #wrapper {
   header {
-    // background-color: #ccaaff;
     background-image: url('/assets/lti_public_resources/public_resources_logo.png');
-    background-position: 10px 15px;
-    background-repeat: none;
+    background-repeat: no-repeat;
+    background-position: 10px 10px;
   }
 }
