added embed of media in lti_launch_url return type

--- a/app/views/lti_public_resources/ember/app.html.erb
+++ b/app/views/lti_public_resources/ember/app.html.erb
@@ -10,6 +10,7 @@
   <%= stylesheet_link_tag "lti_public_resources/application" %>
 
   <style>
+  #wrapper               header { background-image: url('<%= asset_path("lti_public_resources/public_resources_logo.png") %>') !important; }
   #wrapper .khan_academy header { background-image: url('<%= asset_path("lti_public_resources/khan_academy_logo.png") %>') !important; }
   #wrapper .quizlet      header { background-image: url('<%= asset_path("lti_public_resources/quizlet_logo.png") %>') !important; }
   #wrapper .youtube      header { background-image: url('<%= asset_path("lti_public_resources/youtube_logo.png") %>') !important; }
