added google analytics tracking

--- a/app/views/lti_public_resources/ember/_schooltube.html.erb
+++ b/app/views/lti_public_resources/ember/_schooltube.html.erb
@@ -7,5 +7,6 @@
 <iframe src="http://www.schooltube.com/embed/<%= @remote_id %>" 
   frameborder="0" style="position: absolute; height: 100%; overflow: hidden; width:100%;" 
   height="100%" width="100%" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<%= render partial: "analytics" %>
 </body>
 </html>
