--- a/app/views/lti_public_resources/ember/app.html.erb
+++ b/app/views/lti_public_resources/ember/app.html.erb
@@ -37,5 +37,7 @@
   <script>
     window.App = require('appkit/app')["default"].create();
   </script>
+
+  <%= render partial: "analytics" %>
 </body>
 </html>
