--- a/app/views/lti_public_resources/ember/_quizlet.html.erb
+++ b/app/views/lti_public_resources/ember/_quizlet.html.erb
@@ -4,8 +4,9 @@
   <title>LTI Public Resources</title>
 </head>
 <body style="margin: 0px; padding: 0px; overflow: hidden;">
-<iframe src="<%= @url %>"
+<iframe src="https://quizlet.com/<%= @remote_id %>/flashcards/embedv2"
   frameborder="0" style="position: absolute; height: 100%; overflow: hidden; width:100%;" 
   height="100%" width="100%" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<%= render partial: "analytics" %>
 </body>
 </html>
