--- a/app/views/lti_public_resources/ember/_vimeo.html.erb
+++ b/app/views/lti_public_resources/ember/_vimeo.html.erb
@@ -7,5 +7,6 @@
 <iframe src="https://player.vimeo.com/video/<%= @remote_id %>?badge=0" 
   frameborder="0" style="position: absolute; height: 100%; overflow: hidden; width:100%;" 
   height="100%" width="100%" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<%= render partial: "analytics" %>
 </body>
 </html>
