--- a/app/views/lti_public_resources/ember/_youtube.html.erb
+++ b/app/views/lti_public_resources/ember/_youtube.html.erb
@@ -7,5 +7,6 @@
 <iframe src="https://www.youtube.com/apiplayer?video_id=<%= @remote_id %>" 
   frameborder="0" style="position: absolute; height: 100%; overflow: hidden; width:100%;" 
   height="100%" width="100%" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<%= render partial: "analytics" %>
 </body>
 </html>
